--- a/PRODISIC.Datos/PRODISIC.Datos.csproj
+++ b/PRODISIC.Datos/PRODISIC.Datos.csproj
@@ -47,6 +47,7 @@
     <Compile Include="D_Marcas.cs" />
     <Compile Include="D_Mesas.cs" />
     <Compile Include="D_Prodisic_Venta.cs" />
+    <Compile Include="D_Productos.cs" />
     <Compile Include="D_SubFamilias.cs" />
     <Compile Include="D_Unidades_Medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
