--- a/PRODISIC.Entidades/PRODISIC.Entidades.csproj
+++ b/PRODISIC.Entidades/PRODISIC.Entidades.csproj
@@ -46,6 +46,7 @@
     <Compile Include="E_Marcas.cs" />
     <Compile Include="E_Mesas.cs" />
     <Compile Include="E_Prodisic_Venta.cs" />
+    <Compile Include="E_Productos.cs" />
     <Compile Include="E_SubFamilias.cs" />
     <Compile Include="E_Unidades_Medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
