--- a/PRODISIC.Negocio/PRODISIC.Negocio.csproj
+++ b/PRODISIC.Negocio/PRODISIC.Negocio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="N_Marcas.cs" />
     <Compile Include="N_Mesas.cs" />
     <Compile Include="N_Prodisic_Venta.cs" />
+    <Compile Include="N_Productos.cs" />
     <Compile Include="N_SubFamilias.cs" />
     <Compile Include="N_Unidades_Medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
