--- a/PRODISIC.Presentacion/PRODISIC.Presentacion.csproj
+++ b/PRODISIC.Presentacion/PRODISIC.Presentacion.csproj
@@ -149,6 +149,12 @@
     <Compile Include="Reportes\Frm_Rpt_Prodisic_Venta.Designer.cs">
       <DependentUpon>Frm_Rpt_Prodisic_Venta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Frm_Rpt_Productos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\Frm_Rpt_Productos.Designer.cs">
+      <DependentUpon>Frm_Rpt_Productos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Frm_Rpt_SubFamilias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -210,6 +216,9 @@
     <EmbeddedResource Include="Reportes\Frm_Rpt_Prodisic_Venta.resx">
       <DependentUpon>Frm_Rpt_Prodisic_Venta.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Frm_Rpt_Productos.resx">
+      <DependentUpon>Frm_Rpt_Productos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Frm_Rpt_SubFamilias.resx">
       <DependentUpon>Frm_Rpt_SubFamilias.cs</DependentUpon>
     </EmbeddedResource>
@@ -221,6 +230,7 @@
     <EmbeddedResource Include="Reportes\Rpt_Marcas.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_Mesas.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_Prodisic_Venta.rdlc" />
+    <EmbeddedResource Include="Reportes\Rpt_Productos.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_SubFamilias.rdlc" />
     <EmbeddedResource Include="Reportes\Rpt_Unidades_Medidas.rdlc" />
     <None Include="packages.config" />
