--- a/PRODISIC.Datos/PRODISIC.Datos.csproj
+++ b/PRODISIC.Datos/PRODISIC.Datos.csproj
@@ -46,6 +46,7 @@
     <Compile Include="D_Cierres_Turnos.cs" />
     <Compile Include="D_Familias.cs" />
     <Compile Include="D_Marcas.cs" />
+    <Compile Include="D_MesaAbierta.cs" />
     <Compile Include="D_Mesas.cs" />
     <Compile Include="D_Prodisic_Venta.cs" />
     <Compile Include="D_Productos.cs" />
